--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@babel/runtime": "^7.24.6",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "uuid": "^10.0.0",
     "vue-datepicker-next": "^1.0.3"
   },
   "devDependencies": {
