--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "node-cron": "^3.0.3",
     "uuid": "^10.0.0",
     "vue-datepicker-next": "^1.0.3"
   },
