--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "node-cron": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "uuid": "^10.0.0",
     "vue-datepicker-next": "^1.0.3"
   },
